bundle is a root component now, component routing, watch is almost working (will be waiting for webpack update)

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,7 @@
     <base href="/">
 
   </head>
-  <body ng-strict-di ng-cloak>
-	  <test>
-      Loading...
-	  </test>
-
+  <body ng-app="test" ng-strict-di ng-cloak>
+    <ui-view/>
   </body>
 </html>
