--- a/src/bundles/test/test.html
+++ b/src/bundles/test/test.html
@@ -1,5 +1,20 @@
 <!-- Place all UI elements intended to be present across all routes in this file -->
-<common-navbar></common-navbar>
 <div class="test">
-  <div ui-view></div>
+  <section>
+    <p>{{ vm.name }} header</p>
+    <common-navbar></common-navbar>
+  <section>
+
+  </section>
+    <p>--------{{ vm.name }} body----------</p>
+    <div ui-view>
+      <h1>This is default content!</h1>
+    </div>
+    <p>--------END: {{ vm.name }} body-----</p>
+  </section>
+
+  </section>
+    <p>{{ vm.name }} footer</p>
+  </section>
 </div>
+
