preliminary bundle generator

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <base href="/">
 
   </head>
-  <body ng-app="test" ng-strict-di ng-cloak>
+  <body ng-app="b1" ng-strict-di ng-cloak>
     <ui-view/>
   </body>
 </html>
