--- a/src/bundles/test/test.html
+++ b/src/bundles/test/test.html
@@ -1,6 +1,6 @@
 <!-- Place all UI elements intended to be present across all routes in this file -->
 <div class="test">
-  <img src="/Content/images/yang-yin.jpg" alt="">
+  <img src="Content/images/yang-yin.jpg" alt="">
   <section>
     <p>{{ vm.httpName }}</p>
     <p>{{ vm.name }} header</p>
