--- a/generator/bundle/temp.html
+++ b/generator/bundle/temp.html
@@ -4,10 +4,8 @@
     <h3>{{ vm.name }} header</h3>
   </section>
 
-  <section class="content">
-    <div ui-view>
-      <p>This is default content. which gets replaced when navigating to child route/state.</p>
-    </div>
+  <section class="content" ui-view>
+    <p>This is default content. which gets replaced when navigating to child route/state.</p>
   </section>
 
   <section class="footer">
