README.md update; better initial bundle structure with home state;

--- a/generator/bundle/temp.html
+++ b/generator/bundle/temp.html
@@ -5,7 +5,7 @@
   </section>
 
   <section class="content" ui-view>
-    <p>This is default content. which gets replaced when navigating to child route/state.</p>
+    <p>Content placeholder.</p>
   </section>
 
   <section class="footer">
