--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           '<div ng-show="!$state.current.name || $state.current.name == rootStateName">',
             //'<center>',
               <% for (let i=0; i < webpackConfig.metadata.env.APP_BUNDLES.length; i++) { %>
-                '<span><a ui-sref="<%= webpackConfig.metadata.env.APP_BUNDLES[i] %>"> <%= webpackConfig.metadata.env.APP_BUNDLES[i] %></a></span>&nbsp|',
+                '<span><a ui-sref="<%= webpackConfig.metadata.env.APP_BUNDLES[i] %>.home"> <%= webpackConfig.metadata.env.APP_BUNDLES[i] %></a></span>&nbsp|',
               <% } %>
             //'</center>',
             '<hr/>',
