implemented support for application prefix

--- a/generator/bundle/temp.html
+++ b/generator/bundle/temp.html
@@ -1,5 +1,5 @@
 <!-- Place all UI elements intended to be present across all routes in this file -->
-<div class="<%= lispFullName %>">
+<div class="<%= lispAppPrefix %><%= lispFullName %>">
   <section class="header">
     <h3>{{ vm.name }} header</h3>
   </section>
