improved bundle and component generators

--- a/generator/bundle/temp.html
+++ b/generator/bundle/temp.html
@@ -1,7 +1,7 @@
 <!-- Place all UI elements intended to be present across all routes in this file -->
 <div class="<%= lispAppPrefix %><%= lispFullName %>">
   <section class="header">
-    <h3>{{ vm.name }} header</h3>
+    <h3><%= dotedCamelFullName => header</h3>
   </section>
 
   <section class="content" ui-view>
